fix(shortestpath): allow W330 access with house spell